can use git and dvc from inside the container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,9 @@ version: "3.7"
 services:
   jupyter:
     image: battery-dev/jupyter:latest
-    build: ./jupyter_app
+    build: .
     container_name: jupyter
     ports:
       - "8888:8888"
-    working_dir: "/juypter_app"
     environment:
       - JUPYTER_PORT=8888
